include_HEADERS = \
	libevt.h

pkginclude_HEADERS = \
	libevt/codepage.h \
	libevt/definitions.h \
	libevt/error.h \
	libevt/extern.h \
	libevt/features.h \
	libevt/types.h

EXTRA_DIST = \
	libevt.h.in \
	libevt/definitions.h.in \
	libevt/features.h.in \
	libevt/types.h.in

DISTCLEANFILES = \
	libevt.h \
	libevt/definitions.h \
	libevt/features.h \
	libevt/types.h \
	Makefile \
	Makefile.in

