EXTRA_DIST = \
	libevt.pmdoc/01bin.xml.in \
	libevt.pmdoc/01bin-contents.xml \
	libevt.pmdoc/02include.xml.in \
	libevt.pmdoc/02include-contents.xml \
	libevt.pmdoc/03lib.xml.in \
	libevt.pmdoc/03lib-contents.xml \
	libevt.pmdoc/04share.xml.in \
	libevt.pmdoc/04share-contents.xml \
	libevt.pmdoc/05python.xml.in \
	libevt.pmdoc/05python-contents.xml \
	libevt.pmdoc/index.xml \
	libevt.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libevt.pmdoc/01bin.xml
	/bin/rm -f libevt.pmdoc/02include.xml
	/bin/rm -f libevt.pmdoc/03lib.xml
	/bin/rm -f libevt.pmdoc/04share.xml
	/bin/rm -f libevt.pmdoc/05python.xml
	/bin/rm -f libevt.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

