EXTRA_DIST = \
	evtexport/evtexport.vcproj \
	evtinfo/evtinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libevt_dll/libevt_dll.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	libevt.sln

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

