MSVSCPP_FILES = \
	evt_test_open_close/evt_test_open_close.vcproj \
	evt_test_set_ascii_codepage/evt_test_set_ascii_codepage.vcproj \
	evtexport/evtexport.vcproj \
	evtinfo/evtinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libevt/libevt.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pyevt/pyevt.vcproj \
	libevt.sln

SCRIPT_FILES = \
	scripts/vs2008_x64.sh \
	scripts/vs2008_x64_sln.sed \
	scripts/vs2008_x64_vcproj.sed \
	scripts/vs2010_x64.sh \
	scripts/vs2010_x64_sln.sed \
	scripts/vs2010_x64_vcxproj.sed

EXTRA_DIST = \
	$(MSVSCPP_FILES) \
	$(SCRIPT_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

