MSVSCPP_FILES = \
	evt_test_error/evt_test_error.vcproj \
	evt_test_file/evt_test_file.vcproj \
	evt_test_io_handle/evt_test_io_handle.vcproj \
	evt_test_notify/evt_test_notify.vcproj \
	evt_test_record/evt_test_record.vcproj \
	evt_test_record_values/evt_test_record_values.vcproj \
	evt_test_support/evt_test_support.vcproj \
	evtexport/evtexport.vcproj \
	evtinfo/evtinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libevt/libevt.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pyevt/pyevt.vcproj \
	libevt.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

